# xerboxion

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  package.json  pnpm-workspace.yaml
.github/workflows/: generate-pdf.yml
.ploxion-graph/: connections.json  graph-viewer.html  ploxions.json  xeri0ns.json
.workspace/: dependencies.json
paper/: README.md
ploxions/cubion/: README.md  ploxion.json
ploxions/galactic-architect/: README.md  ploxion.json
ploxions/room-map/: README.md  ploxion.json
ploxions/xerax/: README.md  ploxion.json
ploxions/xerboxion-core/: README.md  ploxion.json
ploxions/xerfarm/: README.md  ploxion.json
research/: README.md
scripts/: check-deps.js
xeri0ns/galactic-jarvis/: README.md  xeri0n.json
xeri0ns/swarm-xerboxion/: README.md  xeri0n.json
